<resources>
    <string name="app_name">BandU</string>
    <string name="welcome">BandU</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_signup">Sign Up</string>
    <string name="no_gps">Your GPS is not disabled or it is not working</string>
    <string name="passCaptcha">You are not a robot!</string>
    <string name="noPassCaptcha">You did not pass the captcha prompt!</string>
    <string name="termsAndConditions">I accept the Terms of Service</string>
    <string name="checkEmail">A verification link has been sent to your email account</string>
    <string name="ReturnToSignIn">Return to Sign In page</string>
    <string name="sendEmailAgain">Send Email Again</string>

    <!--Navigator-->
    <string name="nav_home">Home</string>
    <string name="nav_map">Map</string>
    <string name="nav_search">Search</string>
    <string name="nav_subscriptions">Subscriptions</string>
    <string name="nav_user_parameters">User Parameters</string>
    <string name="nav_settings">Settings</string>

    <string name="nav_sing_out">Sign out</string>


    <!--Subscriptions-->
    <string name="subscriptions_current">Current Subscriptions</string>
    <string name="subscriptions_add">Add Subscriptions</string>
    <string name="subscriptions_current_text_view">Swipe left to unsubscribe to a genre!</string>
    <string name="subscriptions_add_text_view">Swipe left to subscribe to a genre!</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    //Publisher
    <string name="become_publisher">Become a publisher</string>
</resources>
