<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ShowIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_reader_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_home_white"/>
        <item
            android:id="@+id/nav_reader_favorite"
            android:title="Favorites"
            android:icon="@drawable/ic_star"/>
        <item
            android:id="@+id/nav_reader_search"
            android:title="@string/nav_search"
            android:icon="@drawable/ic_search_white"/>
        <item
            android:id="@+id/nav_reader_subscriptions"
            android:title="@string/nav_subscriptions"
            android:icon="@drawable/ic_rss_feed_white"/>
        <item
            android:id="@+id/nav_reader_settings"
            android:title="@string/nav_settings"
            android:icon="@drawable/ic_settings_white"/>
    </group>

    <item android:title="User Options">
        <menu>
            <item
                android:id="@+id/nav_sing_out"
                android:icon="@drawable/ic_exit_to_app"
                android:title="@string/nav_sing_out" />

        </menu>
    </item>

</menu>