<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".verifyEmailActivity"
    tools:layout_editor_absoluteY="81dp">


    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/verifyEmailMessage"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="20dp"
            android:textSize="25dp"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:text="@string/checkEmail" />

        <Button
            android:id="@+id/buttonSendEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:text="@string/sendEmailAgain" />

        <Button
            android:id="@+id/buttonReturnToSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:text="@string/ReturnToSignIn" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>